--- a/css/hero.css
+++ b/css/hero.css
@@ -1,4 +1,5 @@
 body{
+	background-color: pink;
 	margin: 0;
 	font-family: 'helvetica'; 'arial', sans-serif;
 	font-size: 20px;
@@ -38,13 +39,52 @@ h2{
 	margin: 40px 0 10px;
 }
 
-a{ 
-	color: crimson;
+
+
+a.blue{
+	color: royalblue;
+	text-decoration: none; 
 }
-a:hover{
+
+a.blue:hover{
 	color: white;
-	background-color: hotpink;
+	background-color: royalblue;
+	text-decoration: none; 
 }
+
+a.red{ 
+	color: red;
+	text-decoration: none; 
+}
+
+a.red:hover{
+	color: white;
+	background-color: red;
+	text-decoration: none; 
+}
+
+a.green{ 
+	color: green;
+	text-decoration: none; 
+}
+
+a.green:hover{
+	color: white;
+	background-color: green;
+	text-decoration: none; 
+}
+
+a.orange{ 
+	color: darkorange;
+	text-decoration: none; 
+}
+
+a.orange:hover{
+	color: white;
+	background-color: darkorange;
+	text-decoration: none; 
+}
+
 footer{
 	background-color: pink;
 	text-align: center;
@@ -59,12 +99,12 @@ footer a{
 	color: white;
 }
 footer a:hover{
-	opacity: .5;
-	background-color: transparent;
+	color: crimson;
+	text-decoration: none;
 }
 
 p.caption{
-	color: #999999;
+	color: ##2F4F4F;
 	font-style: italic;
 	margin-top: 0;
 	font-size: 15px;
